proxy/etc/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
    - name: listener_web
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_web_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_web_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api"
                          route:
                            host_rewrite: leia-core
                            cluster: service_core
                        - match:
                            prefix: "/swagger"
                          route:
                            host_rewrite: leia-core
                            cluster: service_core
                        - match:
                            prefix: "/webjars"
                          route:
                            host_rewrite: leia-core
                            cluster: service_core
                        - match:
                            path: "/etc/swagger.yaml"
                          route:
                            host_rewrite: leia-core
                            cluster: service_core
                        - match:
                            path: "/v2/api-docs"
                          route:
                            host_rewrite: leia-core
                            prefix_rewrite: "/etc/swagger.yaml"
                            cluster: service_core
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite: leia-present
                            cluster: service_present
                http_filters:
                  - name: envoy.router
    - name: listener_axon
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8124
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                stat_prefix: ingress_axon_http
                route_config:
                  name: local_axon_route
                  virtual_hosts:
                    - name: local_axon_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            host_rewrite: axon-server
                            cluster: service_axon
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.router
    - name: listener_mongodb
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 27017
      filter_chains:
        - filters:
            - name: envoy.tcp_proxy
              config:
                stat_prefix: ingress_tcp_mondodb
                cluster: service_mongodb
  clusters:
    - name: service_present
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_present
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: leia-present
                      port_value: 3000
    - name: service_core
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_core
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: leia-core
                      port_value: 8080
    - name: service_axon
      connect_timeout: 0.25s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}
      load_assignment:
        cluster_name: service_axon
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: axon-server
                      port_value: 8124
    - name: service_mongodb
      connect_timeout: 0.25s
      type: STRICT_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_core
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mongodb
                      port_value: 27017
